ACLOCAL_AMFLAGS = -I m4

SUBDIRS =  \
libraries/utils \
libraries/linearAlgebra \
libraries/trustRegion \
libraries/cfsqp \
libraries/donlp2 \
libraries/solvopt \
libraries/randomNumbers \
libraries/gaussHermite \
libraries/parameters \
libraries/bisonbiogeme \
libraries/pythonbiogeme \
libraries \
tools/histograms \
tools/prepareData \
tools/mod2py \
biogeme \
pybiogeme \
testing \
pythonbiogeme \
biosim \
biomerge \
doc \
gui \
webui

